--- a/style.css
+++ b/style.css
@@ -45,6 +45,40 @@ body {
   padding-bottom: 1rem;
 }
 
+.hero {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.headline {
+  font-size: 15rem;
+  color: #00aced;
+  font-weight: 100;
+  line-height: 0.4;
+}
+
+.headline::first-letter {
+  font-size: 20rem;
+}
+
+.sub-heading {
+  font-size: 10rem;
+  font-style: italic;
+}
+
+.parallax {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .btn-primary {
   background-color: #6648b1;
   border: 1px solid #6648b1;
