--- a/style.css
+++ b/style.css
@@ -45,40 +45,6 @@ body {
   padding-bottom: 1rem;
 }
 
-.hero {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-.headline {
-  font-size: 15rem;
-  color: #00aced;
-  font-weight: 100;
-  line-height: 0.4;
-}
-
-.headline::first-letter {
-  font-size: 20rem;
-}
-
-.sub-heading {
-  font-size: 10rem;
-  font-style: italic;
-}
-
-.parallax {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
 .btn-primary {
   background-color: #6648b1;
   border: 1px solid #6648b1;
@@ -328,19 +294,6 @@ figure {
   padding: 1rem;
 }
 
-/*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
+/* project css */
 
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
-
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-*/
+/* project end here */
